Add header styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Node.js</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
       <header role="header">
@@ -16,8 +17,8 @@
             <a href="#">DOCS</a>
             <a href="#">GET INVOLVED</a>
             <a href="#">SECURITY</a>
-            <a href="#">NEWS</a>
-            <a href="#">FOUNDATION</a>
+            <a href="#" id="news">NEWS</a>
+            <a href="#" id="foundation">FOUNDATION</a>
           </nav>
         </section>
       </header>
