Tighten margins and update top section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Node.js</title>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:500" rel="stylesheet">
   </head>
   <body>
       <header role="header">
@@ -25,8 +25,8 @@
       <main role="main">
         <section class="main-wrap">
           <p>Node.js® is a JavaScript runtime built on <a href="https://developers.google.com/v8/" target="_blank">Chrome's V8 JavaScript engine</a>. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient. Node.js' package ecosystem, <a href="https://www.npmjs.com/" target="_blank">npm</a>, is the largest ecosystem of open source libraries in the world.</p>
-          <a href="https://nodejs.org/en/blog/vulnerability/jan-2018-spectre-meltdown/">Spectre and Meltdown in the context of Node.js.</a>
-          <h3>Download for macOS (x64)</h3>
+          <a class="main-wrap__a"  href="https://nodejs.org/en/blog/vulnerability/jan-2018-spectre-meltdown/">Spectre and Meltdown in the context of Node.js.</a>
+          <h1>Download for macOS (x64)</h1>
           <article class="main-wrap__article">
             <button>8.9.4 LTS<span>Recommended For Most Users</span></button>
             <aside class="main-wrap__aside">
