Add footer styling and hover states

--- a/index.html
+++ b/index.html
@@ -26,44 +26,48 @@
   </header>
   <main role="main">
     <section class="main-wrap">
-      <p>Node.js® is a JavaScript runtime built on <a href="https://developers.google.com/v8/" target="_blank">Chrome's V8 JavaScript engine</a>. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient. Node.js' package
-        ecosystem, <a href="https://www.npmjs.com/" target="_blank">npm</a>, is the largest ecosystem of open source libraries in the world.</p>
-      <a class="main-wrap__a" href="https://nodejs.org/en/blog/vulnerability/jan-2018-spectre-meltdown/">Spectre and Meltdown in the context of Node.js.</a>
+      <p>Node.js® is a JavaScript runtime built on <a href="https://developers.google.com/v8/" target="_blank" class="main-wrap__a">Chrome's V8 JavaScript engine</a>. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient. Node.js' package
+        ecosystem, <a href="https://www.npmjs.com/" target="_blank" class="main-wrap__a">npm</a>, is the largest ecosystem of open source libraries in the world.</p>
+      <a class="main-wrap__a" id="main-wrap__a" href="https://nodejs.org/en/blog/vulnerability/jan-2018-spectre-meltdown/">Spectre and Meltdown in the context of Node.js.</a>
       <h1>Download for macOS (x64)</h1>
-      <article class="main-wrap__article article-one">
+      <article class="main-wrap__article">
         <aside class="main-wrap__aside">
           <button>8.9.4 LTS<span>Recommended For Most Users</span></button>
-          <a href="#">Other Downloads</a>
-          <a href="#">Changelog</a>
-          <a href="#" id="api-docs">API Docs</a>
+          <a href="#" class="aside__a">Other Downloads</a>
+          <a href="#" class="aside__a">Changelog</a>
+          <a href="#" class="aside__a" id="api-docs1">API Docs</a>
         </aside>
         <aside class="main-wrap__aside">
           <button>9.5.0 CURRENT<span>Latest Features</span></button>
-          <a href="#">Other Downloads</a>
-          <a href="#">Changelog</a>
-          <a href="#" id="api-docs">API Docs</a>
+          <a href="#" class="aside__a">Other Downloads</a>
+          <a href="#" class="aside__a">Changelog</a>
+          <a href="#" class="aside__a" id="api-docs2">API Docs</a>
         </aside>
       </article>
       <article class="main-wrap__article article-two">
-        <p>Or have a look at the <a href="https://github.com/nodejs/Release#release-schedule">LTS schedule</a>.</p>
-        <p>Sign up for <a href="https://us14.campaign-archive.com/home/?u=c7c2e114a827812354112c23b&id=f006b61f29">Node.js Everywhere</a>, the official Node.js Weekly Newsletter.</p>
+        <p>Or have a look at the <a href="https://github.com/nodejs/Release#release-schedule" target="_blank" class="main-wrap__a">LTS schedule</a>.</p>
+        <p>Sign up for <a href="https://us14.campaign-archive.com/home/?u=c7c2e114a827812354112c23b&id=f006b61f29" target="_blank" class="main-wrap__a">Node.js Everywhere</a>, the official Node.js Weekly Newsletter.</p>
       </article>
     </section>
   </main>
   <footer role="footer">
-    <article class="footer__article">
-      <a href="https://www.linuxfoundation.org/projects/"><img src="img/linux-logo.png"></a>
-      <a href="https://github.com/nodejs/node/issues">Report Node.js issue</a>
-      <a href="https://github.com/nodejs/nodejs.org/issues">Report Website issue</a>
-      <a href="https://github.com/nodejs/help/issues">Get Help</a>
-    </article>
-    <article class="footer__article">
-      <p>© 2018 Node.js Foundation. All Rights Reserved. Portions of this site originally © 2018 Joyent.</p>
-      <p>Node.js is a trademark of Joyent, Inc. and is used with its permission. Please review the Trademark Guidelines of the Node.js Foundation.</p>
-      <p>Linux Foundation is a registered trademark of The Linux Foundation.</p>
-      <p>Linux is a registered trademark of Linus Torvalds.</p>
-      <a href="https://raw.githubusercontent.com/nodejs/node/master/LICENSE">Node.js Project Licensing Information.</a>
-    </article>
+    <section class="footer__section">
+      <article class="footer__article article-three">
+        <a href="https://www.linuxfoundation.org/projects/"><img src="img/linux-logo.png"></a>
+        <aside class="footer__aside">
+          <a href="https://github.com/nodejs/node/issues" class="footer__a">Report Node.js issue</a>
+          <a href="https://github.com/nodejs/nodejs.org/issues" class="footer__a">Report Website issue</a>
+          <a href="https://github.com/nodejs/help/issues" class="footer__a" id="help">Get Help</a>
+        </aside>
+      </article>
+      <article class="footer__article article-four">
+        <p class="footer__p">© 2018 Node.js Foundation. All Rights Reserved. Portions of this site originally © 2018 Joyent.</p>
+        <p>Node.js is a trademark of Joyent, Inc. and is used with its permission. Please review the <a href="https://nodejs.org/static/documents/trademark-policy.pdf">Trademark Guidelines of the Node.js Foundation</a>.</p>
+        <p>Linux Foundation is a registered trademark of The Linux Foundation.</p>
+        <p>Linux is a registered <a href="https://www.linuxmark.org/">trademark of Linus Torvalds</a>.</p>
+        <a href="https://raw.githubusercontent.com/nodejs/node/master/LICENSE">Node.js Project Licensing Information.</a>
+      </article>
+    </section>
   </footer>
 </body>
 
